# 2026-rating-tools

./: .gitignore  README.md  ai-courses.csv  build_dashboard.py  dashboard.html  dashboard_template.html  failed.csv  filter_ai_courses.py  output.csv  prompt.txt  pyproject.toml  rate_courses.py  rating.csv  rating_A_ge3.csv  rating_all.csv
config/: keyterms.txt  prompt.txt
data/: 114-0001-output.csv  114-0001-rating.csv  114-0001.xlsx  114-0037-output.csv  114-0037-rating.csv  114-0037.xlsx  output.csv  rating.csv
doc/: document.md
references/: 114-nccu.html  AI資源中心_區域學校分配_0625版（高教司）.xlsx  architecture.pptx  dashboard.html
release/: document.md  example-nccu.md  release.md
tools/: build.py  testLLM.py  test_LLM_resp_api.py
