[project]
name = "2026-rating-tools"
version = "0.1.0"
description = "2026-rating-tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"requests>=2.32.0",
	"pandas>=3.0.3",
	"openpyxl>=3.1.5",
	"xlrd>=2.0.2",
]

[project.optional-dependencies]
build = [
	"pyinstaller>=6.21.0",
]

[tool.pyinstaller]
noconfirm = true
clean = true
onefile = true
distpath = "bin"

[tool.pyinstaller.targets]
scripts = [
	"rate_courses.py",
	"filter_ai_courses.py",
	"build_dashboard.py",
]
